unpackaged/main/default/objects/cmbls__Disbursement__c/cmbls__Disbursement__c.object-meta.xml
<CustomObject>
    <label>Disbursement</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Disbursement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>