unpackaged/main/default/objects/cmbls__Disbursement__c/fields/ACH_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>ACH_Rejected_Reason__c</fullName>
    <label>ACH Rejected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACH Rejected by Customer</fullName>
            </value>
            <value>
                <fullName>Incorrect Account Name</fullName>
            </value>
            <value>
                <fullName>Invalid Routing Number</fullName>
            </value>
            <value>
                <fullName>Invalid Account Number</fullName>
            </value>
            <value>
                <fullName>Cancelled - Customer Needs Wire</fullName>
            </value>
            <value>
                <fullName>Cancelled - Deal Unwound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>