unpackaged/main/default/objects/cmbls__Disbursement__c/fields/cmbls__ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>cmbls__ACH_Processor__c</fullName>
    <label>ACH Processor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wells Fargo - NF Funding</fullName>
            </value>
            <value>
                <fullName>Wells Fargo - QBF Funding</fullName>
            </value>
            <value>
                <fullName>NFAS2 Transfer</fullName>
            </value>
            <value>
                <fullName>NF Transfer (QB)</fullName>
            </value>
            <value>
                <fullName>NFSPV1 Transfer</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>ACH Processing Co</fullName>
                <isActive>false</isActive>
                <label>ACH Processing Co</label>
            </value>
            <value>
                <fullName>ACH.com</fullName>
                <isActive>false</isActive>
                <label>ACH.com</label>
            </value>
            <value>
                <fullName>ACHWorks</fullName>
                <isActive>false</isActive>
                <label>ACHWorks</label>
            </value>
            <value>
                <fullName>ACHeck21</fullName>
                <isActive>false</isActive>
                <label>ACHeck21</label>
            </value>
            <value>
                <fullName>Forte</fullName>
                <isActive>false</isActive>
                <label>Forte</label>
            </value>
            <value>
                <fullName>PaySafe</fullName>
                <isActive>false</isActive>
                <label>PaySafe</label>
            </value>
            <value>
                <fullName>NFSPV2 Transfer</fullName>
            </value>
            <value>
                <fullName>NFAS3 Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>