unpackaged/main/default/objects/cmbls__Disbursement__c/fields/cmbls__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>cmbls__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>