unpackaged/main/default/objects/cmbls__Disbursement__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <formula>IF(ISPICKVAL(cmbls__ACH_Processor__c, 'Wire'), cmbls__Effective_Date__c, DATEVALUE(cmbls__Disbursement_Batch__r.cmbls__Batch_Date_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Date</label>
    <type>Date</type>
</CustomField>