unpackaged/main/default/objects/cmbls__Disbursement__c/fields/Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Loan_Number__c</fullName>
    <formula>cmbls__Repayment__r.Merchant_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan #</label>
    <type>Text</type>
</CustomField>