unpackaged/main/default/objects/cmbls__Disbursement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Disbursements</relationshipLabel>
    <relationshipName>Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>