unpackaged/main/default/objects/cmbls__Disbursement__c/fields/Transaction_Amount_ABS__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount_ABS__c</fullName>
    <formula>ABS(cmbls__Transaction_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount (ABS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>