unpackaged/main/default/objects/cmbls__Disbursement__c/fields/Wells_Fargo_Disbursement_ID_Override__c.field-meta.xml
<CustomField>
    <fullName>Wells_Fargo_Disbursement_ID_Override__c</fullName>
    <description>This disbursement ID will be sent to Wells Fargo when populated as an override. Otherwise, the external transaction ID will be used.</description>
    <inlineHelpText>This disbursement ID will be sent to Wells Fargo when populated as an override. Otherwise, the external transaction ID will be used.</inlineHelpText>
    <label>Wells Fargo Disbursement ID Override</label>
    <length>50</length>
    <type>Text</type>
</CustomField>