unpackaged/main/default/objects/cmbls__Disbursement__c/fields/WellsFargo_Request__c.field-meta.xml
<CustomField>
    <fullName>WellsFargo_Request__c</fullName>
    <label>WellsFargo Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>