unpackaged/main/default/objects/cmbls__Disbursement__c/fields/WellsFargo_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>WellsFargo_Request_Date__c</fullName>
    <label>WellsFargo Request Date</label>
    <type>DateTime</type>
</CustomField>