unpackaged/main/default/objects/cmbls__Disbursement__c/recordTypes/cmbls__Commission.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Commission</fullName>
    <active>true</active>
    <label>Commission</label>
</RecordType>