unpackaged/main/default/objects/cmbls__Disbursement__c/recordTypes/cmbls__Funding.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Funding</fullName>
    <active>true</active>
    <label>Funding</label>
</RecordType>