unpackaged/main/default/objects/cmbls__Disbursement__c/recordTypes/cmbls__Open_Balance.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Open_Balance</fullName>
    <active>true</active>
    <label>Open Balance</label>
</RecordType>