unpackaged/main/default/objects/cmbls__Disbursement__c/recordTypes/cmbls__Refund.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Refund</fullName>
    <active>true</active>
    <label>Refund</label>
</RecordType>