unpackaged/main/default/objects/cmbls__Disbursement__c/recordTypes/cmbls__Remittance.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Remittance</fullName>
    <active>true</active>
    <label>Remittance</label>
</RecordType>