unpackaged/main/default/objects/cmbls__Disbursement__c/recordTypes/cmbls__Transfer.recordType-meta.xml
<RecordType>
    <fullName>cmbls__Transfer</fullName>
    <active>true</active>
    <label>Transfer</label>
</RecordType>