unpackaged/main/default/objects/cmbls__Disbursement__c/recordTypes/Payoff.recordType-meta.xml
<RecordType>
    <fullName>Payoff</fullName>
    <active>true</active>
    <label>Payoff</label>
</RecordType>